tests/errors/queue_front_empty_panics.ptt
// Runtime-panic test: Queue.front on an empty queue must
// abort cleanly via the assert(false) path.

use std/queue

spark {
  q is Queue of int
  yell(q.front())
}
